--- a/index5.html
+++ b/index5.html
@@ -7,7 +7,7 @@
 <body>
 <input type="text" id="dollar">
 <button onclick="convertUsd()"> calcule </button>
-<div id="message"></div>
+<div id="رسالة"></div>
 
 <script src="main5.js"></script>
 </body>
